--- a/gps/python/Dockerfile
+++ b/gps/python/Dockerfile
@@ -1,8 +1,14 @@
 ARG IMAGE_ARCH=linux/arm
 ARG IMAGE_TAG=2-bullseye
-FROM --platform=$IMAGE_ARCH torizon/debian:$IMAGE_TAG
+ARG BASE_NAME=debian
 
-RUN apt-get update && apt-get install -y --no-install-recommends python3 python3-pip python3-setuptools && rm -rf /var/lib/apt/lists/*
+FROM --platform=$IMAGE_ARCH torizon/$BASE_NAME:$IMAGE_TAG
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    python3 \
+    python3-pip \
+    python3-setuptools && \
+    rm -rf /var/lib/apt/lists/*
 
 RUN pip3 install --upgrade pip
 
