--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -1,7 +1,12 @@
+ARG BASE_NAME=debian
+ARG IMAGE_ARCH=linux/arm/v7
 ARG IMAGE_TAG=2-bullseye
-FROM --platform=linux/arm torizon/debian:$IMAGE_TAG
+
+FROM --platform=$IMAGE_ARCH torizon/$BASE_NAME:$IMAGE_TAG
+
 RUN apt-get -y update && apt-get install -y \
     libmnl0 \
     collectd \
     && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
+
 CMD ["collectd","-f"]
