--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,6 +82,7 @@ stages:
   - build-collectd
   - build-multiarch
   - build-gstreamer-simple-pipeline
+  - build-opencl
   - deploy-major
   - deploy-minor
   - deploy-patch
@@ -372,6 +373,21 @@ docker-build-gstreamer-simple-pipeline-arm64v8:
     IMAGE_TAG: ${WAYLAND_BASE_VIVANTE_MAJOR}
     DOCKERFILE_FOLDER: "gstreamer/bash/simple-pipeline/"
   stage: build-gstreamer-simple-pipeline
+
+# Only for 64-bit vivante arch
+docker-build-opencl-arm64v8:
+  extends: .docker-build
+  before_script:
+    - export MAJOR="${WAYLAND_BASE_VIVANTE_MAJOR}"
+    - export MINOR="${WAYLAND_BASE_VIVANTE_MINOR}"
+    - export PATCH="${WAYLAND_BASE_VIVANTE_PATCH}"
+  variables:
+    BASE_NAME: wayland-base-vivante
+    IMAGE_NAME: arm64v8-sample-opencl-vivante
+    IMAGE_ARCH: linux/arm64/v8
+    IMAGE_TAG: ${WAYLAND_BASE_VIVANTE_MAJOR}
+    DOCKERFILE_FOLDER: "opencl/"
+  stage: build-opencl
 
 # Enable experimental features in Docker client (experimental feature are needed for manifest)
 .do_docker_experimental: &do_docker_experimental
