--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,6 +83,7 @@ stages:
   - build-multiarch
   - build-gstreamer-simple-pipeline
   - build-opencl
+  - build-opencv
   - deploy-major
   - deploy-minor
   - deploy-patch
@@ -388,6 +389,21 @@ docker-build-opencl-arm64v8:
     IMAGE_TAG: ${WAYLAND_BASE_VIVANTE_MAJOR}
     DOCKERFILE_FOLDER: "opencl/"
   stage: build-opencl
+
+# Only for 64-bit vivante arch
+docker-build-opencv-arm64v8:
+  extends: .docker-build
+  before_script:
+    - export MAJOR="${WAYLAND_BASE_VIVANTE_MAJOR}"
+    - export MINOR="${WAYLAND_BASE_VIVANTE_MINOR}"
+    - export PATCH="${WAYLAND_BASE_VIVANTE_PATCH}"
+  variables:
+    BASE_NAME: wayland-base-vivante
+    IMAGE_NAME: arm64v8-sample-opencv-vivante
+    IMAGE_ARCH: linux/arm64/v8
+    IMAGE_TAG: ${WAYLAND_BASE_VIVANTE_MAJOR}
+    DOCKERFILE_FOLDER: "opencv/"
+  stage: build-opencv
 
 # Enable experimental features in Docker client (experimental feature are needed for manifest)
 .do_docker_experimental: &do_docker_experimental
