--- a/sht31/sht31-influxdb/Dockerfile
+++ b/sht31/sht31-influxdb/Dockerfile
@@ -1,8 +1,9 @@
+ARG BASE_NAME=debian
 ARG IMAGE_ARCH=linux/arm
 # For Apalis iMX8 use IMAGE_ARCH=linux/arm64
 ARG IMAGE_TAG=2-bullseye
 
-FROM --platform=$IMAGE_ARCH torizon/debian:$IMAGE_TAG
+FROM --platform=$IMAGE_ARCH torizon/$BASE_NAME:$IMAGE_TAG
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends python3 \
