--- a/weather/Dockerfile
+++ b/weather/Dockerfile
@@ -1,26 +1,28 @@
 # SDK container as base
+ARG CROSS_TC_IMAGE_ARCH=armhf
 ARG TOOLCHAIN_ARCH=armhf
-ARG PKG_ARCH=armhf
-ARG IMAGE_ARCH=linux/arm
+ARG BASE_NAME=debian
+ARG IMAGE_ARCH=linux/arm/v7
 ARG IMAGE_TAG=2-bullseye
-FROM torizon/debian-cross-toolchain-$PKG_ARCH:2-bullseye AS build
 
-ARG PKG_ARCH
+FROM torizon/debian-cross-toolchain-$CROSS_TC_IMAGE_ARCH:$IMAGE_TAG AS build
+
+ARG CROSS_TC_IMAGE_ARCH
 ARG TOOLCHAIN_ARCH
 
-RUN echo "dpkg --add-architecture $PKG_ARCH"
-RUN dpkg --add-architecture "$PKG_ARCH"
+RUN echo "dpkg --add-architecture $CROSS_TC_IMAGE_ARCH"
+RUN dpkg --add-architecture "$CROSS_TC_IMAGE_ARCH"
 
 # install all required development packages
 RUN apt-get update
 RUN apt-get install -y git \
     cmake \
-    libcurl4-openssl-dev:$PKG_ARCH \
-    libboost1.71-dev:$PKG_ARCH \
-    libboost-system1.71-dev:$PKG_ARCH \
-    libboost-test1.71-dev:$PKG_ARCH \
-    libboost-program-options1.71-dev:$PKG_ARCH \
-    libjsoncpp-dev:$PKG_ARCH \
+    libcurl4-openssl-dev:$CROSS_TC_IMAGE_ARCH \
+    libboost1.71-dev:$CROSS_TC_IMAGE_ARCH \
+    libboost-system1.71-dev:$CROSS_TC_IMAGE_ARCH \
+    libboost-test1.71-dev:$CROSS_TC_IMAGE_ARCH \
+    libboost-program-options1.71-dev:$CROSS_TC_IMAGE_ARCH \
+    libjsoncpp-dev:$CROSS_TC_IMAGE_ARCH \
     && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
 
 # Build influxdb lib
@@ -38,7 +40,7 @@ RUN cd src/build && cmake .. -DCMAKE_TOOLCHAIN_FILE=/$TOOLCHAIN_ARCH-toolchain.c
 RUN cd src/build && make install
 
 # create 2nd container for target
-FROM --platform=$IMAGE_ARCH torizon/debian:$IMAGE_TAG
+FROM --platform=$IMAGE_ARCH torizon/$BASE_NAME:$IMAGE_TAG
 
 # install runtime libraries
 RUN apt-get update
