--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,7 +84,6 @@ stages:
   - build-dlr-gstreamer
   - build-uart-gps-python
   - build-collectd
-  - build-multiarch
   - build-gstreamer-simple-pipeline
   - build-opencl
   - build-opencv
@@ -95,6 +94,7 @@ stages:
   - build-uart-sht31-kiosk
   - build-tflite
   - build-weather
+  - build-multiarch
   - deploy-major
   - deploy-minor
   - deploy-patch
@@ -671,7 +671,7 @@ docker-build-adc-multiarch:
     IMAGE_NAME_32: arm32v7-sample-adc
     IMAGE_NAME_64: arm64v8-sample-adc
   stage: build-multiarch
-  needs: ["build-adc"]
+  needs: ["docker-build-adc", "docker-build-adc-arm64v8"]
 
 docker-build-dbus-tools-multiarch:
   extends: .docker-build-multiarch
@@ -680,7 +680,7 @@ docker-build-dbus-tools-multiarch:
     IMAGE_NAME_32: arm32v7-sample-dbus-tools
     IMAGE_NAME_64: arm64v8-sample-dbus-tools
   stage: build-multiarch
-  needs: ["build-dbus-tools"]
+  needs: ["docker-build-dbus-tools", "docker-build-dbus-tools-arm64v8"]
 
 docker-build-dbus-python-multiarch:
   extends: .docker-build-multiarch
@@ -689,7 +689,7 @@ docker-build-dbus-python-multiarch:
     IMAGE_NAME_32: arm32v7-sample-dbus-python
     IMAGE_NAME_64: arm64v8-sample-dbus-python
   stage: build-multiarch
-  needs: ["build-dbus-python"]
+  needs: ["docker-build-dbus-python", "docker-build-dbus-python-arm64v8"]
 
 docker-build-gpio-bash-multiarch:
   extends: .docker-build-multiarch
@@ -698,7 +698,7 @@ docker-build-gpio-bash-multiarch:
     IMAGE_NAME_32: arm32v7-sample-gpio-bash
     IMAGE_NAME_64: arm64v8-sample-gpio-bash
   stage: build-multiarch
-  needs: ["build-gpio-bash"]
+  needs: ["docker-build-gpio-bash", "docker-build-gpio-bash-arm64v8"]
 
 docker-build-gpio-c-multiarch:
   extends: .docker-build-multiarch
@@ -707,7 +707,7 @@ docker-build-gpio-c-multiarch:
     IMAGE_NAME_32: arm32v7-sample-gpio-c
     IMAGE_NAME_64: arm64v8-sample-gpio-c
   stage: build-multiarch
-  needs: ["build-gpio-c"]
+  needs: ["docker-build-gpio-c", "docker-build-gpio-c-arm64v8"]
 
 docker-build-uart-gps-python-multiarch:
   extends: .docker-build-multiarch
@@ -716,7 +716,7 @@ docker-build-uart-gps-python-multiarch:
     IMAGE_NAME_32: arm32v7-sample-uart-gps-python
     IMAGE_NAME_64: arm64v8-sample-uart-gps-python
   stage: build-multiarch
-  needs: ["build-uart-gps-python"]
+  needs: ["docker-build-uart-gps-python", "docker-build-uart-gps-python-arm64v8"]
 
 docker-build-collectd-multiarch:
   extends: .docker-build-multiarch
@@ -725,7 +725,7 @@ docker-build-collectd-multiarch:
     IMAGE_NAME_32: arm32v7-sample-collectd
     IMAGE_NAME_64: arm64v8-sample-collectd
   stage: build-multiarch
-  needs: ["build-collectd"]
+  needs: ["docker-build-collectd", "docker-build-collectd-arm64v8"]
 
 docker-build-gstreamer-simple-pipeline-multiarch:
   extends: .docker-build-multiarch
@@ -734,7 +734,10 @@ docker-build-gstreamer-simple-pipeline-multiarch:
     IMAGE_NAME_32: arm32v7-sample-gstreamer-simple-pipeline
     IMAGE_NAME_64: arm64v8-sample-gstreamer-simple-pipeline-vivante
   stage: build-multiarch
-  needs: ["build-gstreamer-simple-pipeline"]
+  needs: [
+    "docker-build-gstreamer-simple-pipeline",
+    "docker-build-gstreamer-simple-pipeline-arm64v8"
+    ]
 
 docker-build-pwm-multiarch:
   extends: .docker-build-multiarch
@@ -743,7 +746,7 @@ docker-build-pwm-multiarch:
     IMAGE_NAME_32: arm32v7-sample-pwm
     IMAGE_NAME_64: arm64v8-sample-pwm
   stage: build-multiarch
-  needs: ["build-pwm"]
+  needs: ["docker-build-pwm", "docker-build-pwm-arm64v8"]
 
 docker-build-qt5-python-qml-multiarch:
   extends: .docker-build-multiarch
@@ -757,7 +760,7 @@ docker-build-qt5-python-qml-multiarch:
     # See: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=974101
     IMAGE_NAME_64: arm64v8-sample-qt5-python-qml
   stage: build-multiarch
-  needs: ["build-qt5-python-qml"]
+  needs: ["docker-build-qt5-python-qml", "docker-build-qt5-python-qml-arm64v8"]
 
 docker-build-uart-sht31-flask-app-multiarch:
   extends: .docker-build-multiarch
@@ -766,7 +769,10 @@ docker-build-uart-sht31-flask-app-multiarch:
     IMAGE_NAME_32: arm32v7-sample-uart-sht31-flask-app
     IMAGE_NAME_64: arm64v8-sample-uart-sht31-flask-app
   stage: build-multiarch
-  needs: ["build-uart-sht31-flask-app"]
+  needs: [
+    "docker-build-uart-sht31-flask-app",
+    "docker-build-uart-sht31-flask-app-arm64v8"
+    ]
 
 docker-build-uart-sht31-influxdb-multiarch:
   extends: .docker-build-multiarch
@@ -775,7 +781,10 @@ docker-build-uart-sht31-influxdb-multiarch:
     IMAGE_NAME_32: arm32v7-sample-uart-sht31-influxdb
     IMAGE_NAME_64: arm64v8-sample-uart-sht31-influxdb
   stage: build-multiarch
-  needs: ["build-uart-sht31-influxdb"]
+  needs: [
+    "docker-build-uart-sht31-influxdb",
+    "docker-build-uart-sht31-influxdb-arm64v8"
+    ]
 
 docker-build-uart-sht31-kiosk-multiarch:
   extends: .docker-build-multiarch
@@ -784,7 +793,7 @@ docker-build-uart-sht31-kiosk-multiarch:
     IMAGE_NAME_32: arm32v7-sample-uart-sht31-kiosk
     IMAGE_NAME_64: arm64v8-sample-uart-sht31-kiosk-vivante
   stage: build-multiarch
-  needs: ["build-uart-sht31-kiosk"]
+  needs: ["docker-build-uart-sht31-kiosk", "docker-build-uart-sht31-kiosk-arm64v8"]
 
 docker-build-tflite-multiarch:
   extends: .docker-build-multiarch
@@ -793,7 +802,7 @@ docker-build-tflite-multiarch:
     IMAGE_NAME_32: arm32v7-sample-tflite
     IMAGE_NAME_64: arm64v8-sample-tflite
   stage: build-multiarch
-  needs: ["build-tflite"]
+  needs: ["docker-build-tflite", "docker-build-tflite-arm64v8"]
 
 docker-build-weather-multiarch:
   extends: .docker-build-multiarch
@@ -802,7 +811,7 @@ docker-build-weather-multiarch:
     IMAGE_NAME_32: arm32v7-sample-weather
     IMAGE_NAME_64: arm64v8-sample-weather
   stage: build-multiarch
-  needs: ["build-weather"]
+  needs: ["docker-build-weather", "docker-build-weather-arm64v8"]
 
 # Docker deploy jobs
 #
