--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -119,7 +119,8 @@ stages:
     - docker pull ${CI_REGISTRY_IMAGE}/${IMAGE_NAME}:${GITLAB_DOCKERREGISTRY_SUFFIX_LATEST} || true
     - docker pull ${CI_REGISTRY}/rd/torizon-core/samples/${IMAGE_NAME}:${GITLAB_DOCKERREGISTRY_SUFFIX_LATEST} || true
     - export DATE=$(date +%Y%m%d)
-    - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+    # Ignore error "sh: write error: File exists" when installing qemu-user-static
+    - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes || true
     - docker build --build-arg IMAGE_ARCH=${IMAGE_ARCH}
                      --build-arg DOCKER_REGISTRY=${CI_REGISTRY_IMAGE}
                      --build-arg BASE_NAME=${BASE_NAME}
