--- a/dbus/tools/Dockerfile
+++ b/dbus/tools/Dockerfile
@@ -1,8 +1,9 @@
 ARG BASE_NAME=debian
 ARG IMAGE_ARCH=linux/arm/v7
 ARG IMAGE_TAG=2-bullseye
+ARG DOCKER_REGISTRY=torizon
 
-FROM --platform=$IMAGE_ARCH torizon/$BASE_NAME:$IMAGE_TAG
+FROM --platform=$IMAGE_ARCH $DOCKER_REGISTRY/$BASE_NAME:$IMAGE_TAG
 
 # install required packages
 RUN apt-get -q -y update && apt-get -q -y --no-install-recommends install systemd dbus &&  rm -rf /var/lib/apt/lists/*
