--- a/gps/python/Dockerfile
+++ b/gps/python/Dockerfile
@@ -1,8 +1,9 @@
 ARG IMAGE_ARCH=linux/arm
 ARG IMAGE_TAG=2-bullseye
 ARG BASE_NAME=debian
+ARG DOCKER_REGISTRY=torizon
 
-FROM --platform=$IMAGE_ARCH torizon/$BASE_NAME:$IMAGE_TAG
+FROM --platform=$IMAGE_ARCH $DOCKER_REGISTRY/$BASE_NAME:$IMAGE_TAG
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     python3 \
