--- a/gstreamer/bash/simple-pipeline/Dockerfile
+++ b/gstreamer/bash/simple-pipeline/Dockerfile
@@ -2,8 +2,9 @@ ARG BASE_NAME=wayland-base
 # Use BASE_NAME=wayland-base-vivante for i.MX 8 SoMs
 ARG IMAGE_ARCH=linux/arm/v7
 ARG IMAGE_TAG=2
+ARG DOCKER_REGISTRY=torizon
 
-FROM --platform=$IMAGE_ARCH torizon/$BASE_NAME:$IMAGE_TAG
+FROM --platform=$IMAGE_ARCH $DOCKER_REGISTRY/$BASE_NAME:$IMAGE_TAG
 ARG IMAGE_ARCH
  
 RUN apt-get -y update && apt-get install -y \
