--- a/sht31/flaskapp/Dockerfile
+++ b/sht31/flaskapp/Dockerfile
@@ -2,8 +2,9 @@ ARG BASE_NAME=debian
 ARG IMAGE_ARCH=linux/arm
 # For Apalis iMX8 use IMAGE_ARCH=linux/arm64
 ARG IMAGE_TAG=2-bullseye
+ARG DOCKER_REGISTRY=torizon
 
-FROM --platform=$IMAGE_ARCH torizon/$BASE_NAME:$IMAGE_TAG
+FROM --platform=$IMAGE_ARCH $DOCKER_REGISTRY/$BASE_NAME:$IMAGE_TAG
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends python3 \
