--- a/weather/Dockerfile
+++ b/weather/Dockerfile
@@ -1,11 +1,13 @@
 # SDK container as base
 ARG CROSS_TC_IMAGE_ARCH=armhf
 ARG TOOLCHAIN_ARCH=armhf
+ARG CROSS_TC_DOCKER_REGISTRY=torizon
 ARG BASE_NAME=debian
 ARG IMAGE_ARCH=linux/arm/v7
 ARG IMAGE_TAG=2-bullseye
+ARG DOCKER_REGISTRY=torizon
 
-FROM torizon/debian-cross-toolchain-$CROSS_TC_IMAGE_ARCH:$IMAGE_TAG AS build
+FROM $CROSS_TC_DOCKER_REGISTRY/debian-cross-toolchain-$CROSS_TC_IMAGE_ARCH:$IMAGE_TAG AS build
 
 ARG CROSS_TC_IMAGE_ARCH
 ARG TOOLCHAIN_ARCH
@@ -40,7 +42,7 @@ RUN cd src/build && cmake .. -DCMAKE_TOOLCHAIN_FILE=/$TOOLCHAIN_ARCH-toolchain.c
 RUN cd src/build && make install
 
 # create 2nd container for target
-FROM --platform=$IMAGE_ARCH torizon/$BASE_NAME:$IMAGE_TAG
+FROM --platform=$IMAGE_ARCH $DOCKER_REGISTRY/$BASE_NAME:$IMAGE_TAG
 
 # install runtime libraries
 RUN apt-get update
